fix(TitleSubtitle): Correct font family and update alignment properties in styles

--- a/src/ui/components/atoms/TitleSubtitle/TitleSubtitle.module.scss
+++ b/src/ui/components/atoms/TitleSubtitle/TitleSubtitle.module.scss
@@ -7,11 +7,12 @@
   flex-direction: column;
   margin: 0;
   padding: 0;
+  width: fit-content;
 }
 
 .title-subtitle__title {
   color: $ads-text-main;
-  font-family: Poppins-Semibolt, $ads-font-family-sans;
+  font-family: Poppins-Regular, $ads-font-family-sans;
   font-weight: $ads-font-weight-semibold;
   line-height: $ads-line-height-default;
   margin: 0;
@@ -67,15 +68,35 @@
 }
 
 .title-subtitle--alignment-left {
-  text-align: left;
+  margin-left: 0;
+  margin-right: auto;
+  
+  .title-subtitle__title,
+  .title-subtitle__subtitle {
+    text-align: left;
+  }
 }
 
 .title-subtitle--alignment-center {
-  text-align: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+
+  .title-subtitle__title,
+  .title-subtitle__subtitle {
+    text-align: center;
+  }
 }
 
 .title-subtitle--alignment-right {
-  text-align: right;
+  align-items: flex-end;
+  margin-left: auto;
+  margin-right: 0;
+
+  .title-subtitle__title,
+  .title-subtitle__subtitle {
+    text-align: right;
+  }
 }
 
 .title-subtitle--variant-default {
